--- a/Project/Puzzle solver.vcxproj
+++ b/Project/Puzzle solver.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{D9F5563E-2918-4658-BCA1-F69318DA39AC}</ProjectGuid>
-    <RootNamespace>Project</RootNamespace>
+    <ProjectGuid>{D6E8E013-23A6-424A-A259-603723B5D72C}</ProjectGuid>
+    <RootNamespace>Puzzlesolver</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -138,15 +138,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="C2x2.cpp" />
-    <ClCompile Include="Cubic.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Puzzle.cpp" />
-    <ClCompile Include="Puzzle.h" />
+    <ClCompile Include="..\cubeClass.cpp" />
+    <ClCompile Include="..\Program.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="C2x2.h" />
-    <ClInclude Include="Cubic.h" />
+    <ClInclude Include="..\cubeClass.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
