--- a/Project/Puzzle solver.vcxproj.filters
+++ b/Project/Puzzle solver.vcxproj.filters
@@ -15,27 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
+    <ClCompile Include="..\Program.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Puzzle.h">
-      <Filter>Header Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Puzzle.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Cubic.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C2x2.cpp">
+    <ClCompile Include="..\cubeClass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Cubic.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="C2x2.h">
+    <ClInclude Include="..\cubeClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
